# image-gen-benchmark

./: .gitignore  README.md  benchmark.py  pyproject.toml
config/: models.json  prompts.json  settings.json
