[project]
name = "image-gen-benchmark"
version = "0.1.0"
description = ""
authors = [
    {name = "matt-lenovo-laptop",email = "matmigg0804@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "diffusers>=0.30",
    "transformers>=4.40",
    "accelerate>=0.30",
    "huggingface-hub>=0.23",
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
